--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,8 @@
         - Estimation à la Moyenne : {{err1}}<br><br>
         - Estimation à la régression linéaire (Ridge) : {{err2}}<br><br>
         - Estimation à la Moyenne mobile pondérée : {{err3}}<br><br>
-        - Estimation à la méthode Holt Winter : {{err4}}<br><br><br>
-        <h1>La Meilleure Estimation est : <span></span></h1></div>
+        - Estimation à la méthode Holt Winter : {{err4}}<br><br>
+        La Meilleure Estimation est : </div>
         
         
 
