--- a/templates/graphe.html
+++ b/templates/graphe.html
@@ -22,7 +22,7 @@
         <img style="margin-right:760px; margin-top:100px; float:right; position:absolute;" src="data:image/png;base64, {{ plot2_url }}">
         <img style="margin-left:760px; margin-top:100px; float:left; position:absolute;" src="data:image/png;base64, {{ plot_url }}">
         
-        <div style="margin-top:550px">
+        <div style="margin-top:550px" style="font-family: 'Open Sans', Helvetica;">
         <table>
         <tr>
             <th>Semaine</th>
