--- a/templates/graphe.html
+++ b/templates/graphe.html
@@ -9,26 +9,27 @@
 </head>
 
 <body>
- 
-		<h1><span>Arbitrage</span> <span>des prévisions clients</span> de <span>Johnson Electric</span> et <span>fiabilité</span></h1>
+        <br>
+		<h1><span>Arbitrage</span> des<span> prévisions clients</span> de <span>Johnson Electric</span> et <span>fiabilité</span></h1>
         <form action="/miniup" method="POST">
-            <div style="margin-left:700px; margin-top:50px; float:left; position:absolute; font-family: 'Open Sans', Helvetica;">
-                Nombre minimum de semaines d'historique : <br /><input type="number" name="mini" min="2" max="{{maxhist}}">
+            <h1 style="margin-left:10px; margin-top:50px; float:left; position:absolute; font-weight:bold;">Prédiction à partir de la semaine :</h1>
+            <div style="margin-left:730px; margin-top:70px; float:left; position:absolute; font-family: 'Open Sans', Helvetica;">
+                  <br /><input type="number" name="mini" min="3" max="{{maxhist}}">
             </div>
-            <button class="LoadButton" style="margin-left:700px; margin-top:100px; float:left; position:absolute;" type="submit" value="Submit">Réactualiser</button>
+            <button class="LoadButton" style="margin-left:700px; margin-top:135px; float:left; position:absolute;" type="submit" value="Submit">Réactualiser</button>
         </form>
         <br />
         <br />
-        <img style="margin-right:760px; margin-top:100px; float:right; position:absolute;" src="data:image/png;base64, {{ plot2_url }}">
-        <img style="margin-left:760px; margin-top:100px; float:left; position:absolute;" src="data:image/png;base64, {{ plot_url }}">
+        <img style="margin-left:55px; margin-top:100px; float:left; position:absolute;" src="data:image/png;base64, {{ plot2_url }}">
+        <img style="margin-left:815px; margin-top:100px; float:left; position:absolute;" src="data:image/png;base64, {{ plot_url }}">
         
         <div style="margin-top:550px" style="font-family: 'Open Sans', Helvetica;">
         <table>
         <tr>
             <th>Semaine</th>
-            <script>var livr = {{liv | tojson}}
-            for (var i = 0; i < livr.length; i++) {
-            document.writeln('<td>'+i+'</td>')
+            <script>var sema = {{sem | tojson}}
+            for (var i = 0; i < sema.length; i++) {
+            document.writeln('<td>'+(i+1)+'</td>')
         }
         </script>
         </tr>
