--- a/templates/comparaison.html
+++ b/templates/comparaison.html
@@ -10,17 +10,18 @@
 
 <body>
  
-		<h1><span>Arbitrage</span> des<span> prévisions clients</span> de <span>Johnson Electric</span> ainsi que leurs <span>fiabilités</span></h1>
+		<h1><span>Comparaisons</span> des différentes <span>méthodes</span> de<span> prévisions clients</span> de <span>Johnson Electric</span></h1>
 		<div id="debug" style="margin:65px; margin-top:100px;">
-        <img style="margin-left:760px; margin-top:100px; float:left; position:absolute;" src="data:image/png;base64, {{ plot_url }}">
-        <a href="graphe">Retour aux prédictions</a>
-        <div id="rcorners2" style="margin-left:170px; margin-top:100px; float:left; position:absolute;">
+        <img style="margin-left:110px; margin-top:90px; float:left; position:absolute;" src="data:image/png;base64, {{ plot_url }}">
+        <span><a style="margin-bottom:10px" href="/">Retour</a>
+        <a style="margin-bottom:10px;margin-left:850px " href="graphe">Voir les prédictions</a></span>
+        <div id="rcorners2" style="margin-left:800px; margin-top:50px; float:left; position:absolute;" >
         <br> <h1><span>Ecart moyen entre la prédiction calculée et la valeur exacte :</span></h1> 
-        <br><br><br><br>
-        - Estimation à la Moyenne : {{err1}}<br><br>
-        - Estimation à la régression linéaire (Ridge) : {{err2}}<br><br>
-        - Estimation à la Moyenne mobile pondérée : {{err3}}<br><br>
-        - Estimation à la méthode Holt Winter : {{err4}}<br><br></div>
+        <br><br><br><br><br><br>
+        - Estimation à la Moyenne : {{err1}}<br><br><br><br>
+        - Estimation à la régression linéaire (Ridge) : {{err2}}<br><br><br><br>
+        - Estimation à la Moyenne mobile pondérée : {{err3}}<br><br><br><br>
+        - Estimation à la méthode Holt Winter : {{err4}}<br><br></div><br><br>
         
         
 
