--- a/templates/graphe.html
+++ b/templates/graphe.html
@@ -11,20 +11,20 @@
 <body>
         <br>
 		<h1><span>Arbitrage</span> des<span> prévisions clients</span> de <span>Johnson Electric</span> et <span>fiabilité</span></h1>
+        <span style="margin-top:15px; margin-left:100px; position:absolute;"><a style="margin-left:100px;" href="comparaison">Retour</a>
+            <a style="margin-left:900px; " href="/">Charger un nouvel excel</a></span> 
         <form action="/miniup" method="POST">
-            <h1 style="margin-left:10px; margin-top:50px; float:left; position:absolute; font-weight:bold;">Prédiction à partir de la semaine :</h1>
-            <div style="margin-left:730px; margin-top:70px; float:left; position:absolute; font-family: 'Open Sans', Helvetica;">
-                  <br /><input type="number" name="mini" min="3" max="{{maxhist}}">
-            </div>
-            <button class="LoadButton" style="margin-left:700px; margin-top:135px; float:left; position:absolute;" type="submit" value="Submit">Réactualiser</button>
+            <h1 style="margin-left:10px; margin-top:40px; float:left; position:absolute; font-weight:bold;">Prédiction à partir de la semaine :</h1>
+            <input placeholder="??????????" style="margin-left:730px; margin-top:90px; float:left; position:absolute; font-family: 'Open Sans', Helvetica;" type="number" name="mini" min="3" max="{{maxhist}}">
+            <button class="LoadButton" style="margin-left:710px; margin-top:140px; float:left; position:absolute;" type="submit">Appliquer</button>
         </form>
         <br />
         <br />
-        <img style="margin-left:55px; margin-top:100px; float:left; position:absolute;" src="data:image/png;base64, {{ plot2_url }}">
-        <img style="margin-left:815px; margin-top:100px; float:left; position:absolute;" src="data:image/png;base64, {{ plot_url }}">
+        <img style="margin-left:55px; margin-top:50px; float:left; position:absolute;" src="data:image/png;base64, {{ plot2_url }}">
+        <img style="margin-left:815px; margin-top:50px; float:left; position:absolute;" src="data:image/png;base64, {{ plot_url }}">
         
-        <div style="margin-top:550px" style="font-family: 'Open Sans', Helvetica;">
-        <table>
+        
+        <table class="flat-table" style="margin-left:10px; margin-top:500px; float:left; position:absolute;">
         <tr>
             <th>Semaine</th>
             <script>var sema = {{sem | tojson}}
@@ -50,7 +50,7 @@
         }
         </script> <br />
         </table>
-        </div>
+        
         	
   		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
