--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,15 @@
 </head>
 
 <body>
- 
-		<h1><span>Arbitrage</span> <span>des prévisions clients</span> de <span>Johnson Electric</span> et <span>fiabilité</span></h1>
-        <h1 style="margin-left:100px; margin-top:90px; float:left; position:absolute; font-weight:bold;">Sélectionner le fichier Excel et cliquer sur appliquer</h1>
+        
+		<h1><span>Arbitrage</span> des<span> prévisions clients</span> de <span>Johnson Electric</span> et <span>fiabilité</span></h1>
+        <h1 style="margin-left:0px; margin-top:90px; float:left; position:absolute; font-weight:bold;">Sélectionner le fichier Excel et cliquer sur appliquer</h1>
+        <br><br><br>
         <Form action="/telechargerlexcel" method="POST" enctype="multipart/form-data">
-        <div style="margin-left:700px; margin-top:150px; float:left; position:absolute;">
-			<input type="file" name="inputFile" id="LoadButton" accept=".xlsx" style=" font-weight: 400; font-family: 'Open Sans', Helvetica;" />	
+        <div style="margin-left:600px; margin-top:150px; float:left; position:absolute;">
+			<input type="file" name="inputFile" class="LoadButton" id="LoadButton" accept=".xlsx" style=" font-weight: 400; font-family: 'Open Sans', Helvetica;" required/>	
         </div>
-        <button class="LoadButton" style="margin-left:700px; margin-top:200px; float:left; position:absolute;" type="submit" value="Submit">APPLIQUER</button>
+        <button id="myButton" style="margin-left:700px; margin-top:240px; float:left; position:absolute;" type="submit" value="Submit">APPLIQUER</button>
         </Form>
 
   		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
