--- a/templates/graphe.html
+++ b/templates/graphe.html
@@ -3,20 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Arbitrage des prévisions clients de Johnson Electric et fiabilité</title>
-  
+	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+		 <script src="{{ url_for('static',filename='progressbar2.js') }}"></script>
+	 <link rel="stylesheet" href="{{ url_for('static',filename='progressbar.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static',filename='progressbar4.css') }}">
+	<script src="{{ url_for('static',filename='progressbar4.js') }}"></script>
     <link rel="shortcut icon" href="{{ url_for('static',filename='jlicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
 </head>
 
 <body>
+
+		<div class="preloader-wrap">
+		  <div class="percentage" id="precent"></div>
+		  <div class="loader">
+			<div class="trackbar">
+			  <div class="loadbar"></div>
+			</div>
+			<div class="glow"></div>
+		  </div>
+		</div>
+		<progress id="progressbar" value="0" max="100"></progress> 
+
         <br>
 		<h1><span>Arbitrage</span> des<span> prévisions clients</span> de <span>Johnson Electric</span> et <span>fiabilité</span></h1>
-        <span style="margin-top:15px; margin-left:100px; position:absolute;"><a style="margin-left:100px;" href="comparaison">Retour</a>
+        <span style="margin-top:15px; margin-left:100px; position:absolute;"><a id="start" style="margin-left:100px;" href="comparaison">Retour</a>
             <a style="margin-left:900px; " href="/">Charger un nouvel excel</a></span> 
         <form action="/miniup" method="POST">
             <h1 style="margin-left:10px; margin-top:40px; float:left; position:absolute; font-weight:bold;">Prédiction à partir de la semaine :</h1>
             <input placeholder="??????????" style="margin-left:730px; margin-top:90px; float:left; position:absolute; font-family: 'Open Sans', Helvetica;" type="number" name="mini" min="3" max="{{maxhist}}">
-            <button class="LoadButton" style="margin-left:710px; margin-top:140px; float:left; position:absolute;" type="submit">Appliquer</button>
+            <button id="appli" class="LoadButton" style="margin-left:710px; margin-top:140px; float:left; position:absolute;" type="submit">Appliquer</button>
         </form>
         <br />
         <br />
