--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Arbitrage des prévisions clients de Johnson Electric et fiabilité</title>
-  
+ <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+	 <script src="{{ url_for('static',filename='progressbar.js') }}"></script> 
+	 <script src="{{ url_for('static',filename='progressbar2.js') }}"></script>
+	 <link rel="stylesheet" href="{{ url_for('static',filename='progressbar.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static',filename='jlicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
 </head>
 
 <body>
-        
+
+		<div class="preloader-wrap">
+		  <div class="percentage" id="precent"></div>
+		  <div class="loader">
+			<div class="trackbar">
+			  <div class="loadbar"></div>
+			</div>
+			<div class="glow"></div>
+		  </div>
+		</div>
+       <!-- <div class="progress" style="margin-bottom:-60px;">
+		  <div id="progressBar" class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+			0%
+		  </div>
+		</div> -->
 		<h1><span>Arbitrage</span> des<span> prévisions clients</span> de <span>Johnson Electric</span> et <span>fiabilité</span></h1>
         <h1 style="margin-left:0px; margin-top:90px; float:left; position:absolute; font-weight:bold;">Sélectionner le fichier Excel et cliquer sur appliquer</h1>
         <br><br><br>
@@ -17,14 +38,14 @@
         <div style="margin-left:600px; margin-top:150px; float:left; position:absolute;">
 			<input type="file" name="inputFile" class="LoadButton" id="LoadButton" accept=".xlsx" style=" font-weight: 400; font-family: 'Open Sans', Helvetica;" required/>	
         </div>
-        <button id="myButton" style="margin-left:700px; margin-top:240px; float:left; position:absolute;" type="submit" value="Submit">APPLIQUER</button>
+        <button id="myButton" style="margin-left:700px; margin-top:240px; float:left; position:absolute;" type="submit" value="Submit" >APPLIQUER</button>
         </Form>
-
-  		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+		<div class="progress" id="submit_progress" style="margin-top:-60px;">
+  <div class="progress-bar progress-bar-success " role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="load" style="width:0%">
+    0%
+  </div>
 
 	    <script src="{{ url_for('static',filename='index.js') }}"></script>
-	    <script type="text/javascript">
-           
-	   </script>
+	    	
 </body>
 </html>
