--- a/templates/graphe.html
+++ b/templates/graphe.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Arbitrage des prévisions clients de Johnson Electric et fiabilité</title>
-	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
+		<script src="{{ url_for('static',filename='jquery.js') }}"></script>
 		 <script src="{{ url_for('static',filename='progressbar2.js') }}"></script>
 	 <link rel="stylesheet" href="{{ url_for('static',filename='progressbar.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static',filename='progressbar4.css') }}">
