--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Arbitrage des prévisions clients de Johnson Electric et fiabilité</title>
- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+	<script src="{{ url_for('static',filename='jquery.js') }}"></script>
+	<link rel="stylesheet" href="{{ url_for('static',filename='bootstrap.css') }}">
+	<script src="{{ url_for('static',filename='bootstrap.js') }}"></script>
 	 <script src="{{ url_for('static',filename='progressbar.js') }}"></script> 
 	 <script src="{{ url_for('static',filename='progressbar2.js') }}"></script>
 	 <link rel="stylesheet" href="{{ url_for('static',filename='progressbar.css') }}">
