--- a/templates/comparaison.html
+++ b/templates/comparaison.html
@@ -27,7 +27,7 @@
 		</div>
 		
 
-  <progress id="progressbar" value="0" max="100"></progress> 
+  <progress id="progressbar" value="0" max="100">0%</progress> 
 
 		
 		<h1><span>Comparaisons</span> des différentes <span>méthodes</span> de<span> prévisions clients</span> de <span>Johnson Electric</span></h1>
@@ -41,7 +41,7 @@
         - Estimation à la Moyenne : {{err1}}<br><br><br><br>
         - Estimation à la régression linéaire (Ridge) : {{err2}}<br><br><br><br>
         - Estimation à la Moyenne mobile pondérée : {{err3}}<br><br><br><br>
-        - Estimation à la méthode Holt Winter : <br><br><br><b style="color:#4DAF7C;">Quantité</b> nécessaire <b style="color:#4DAF7C;">prédite</b> à la <b style="color:#4DAF7C;">37ème</b> semaine : <b style="font-size:30px; color:#4DAF7C;">{{prevholt}}</b>  </div><br><br>
+        - Estimation à la méthode Holt Winter : {{err4}}<br><br><br><b style="color:#4DAF7C;">Quantité</b> nécessaire <b style="color:#4DAF7C;">prédite</b> à la <b style="color:#4DAF7C;">36ème</b> semaine : <b style="font-size:30px; color:#4DAF7C;">{{prevholt}}</b>  </div><br><br>
         
       
 
