--- a/templates/index.html
+++ b/templates/index.html
@@ -24,24 +24,27 @@
 			<div class="glow"></div>
 		  </div>
 		</div>
-       <!-- <div class="progress" style="margin-bottom:-60px;">
-		  <div id="progressBar" class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
-			0%
-		  </div>
-		</div> -->
 		<h1><span>Arbitrage</span> des<span> prévisions clients</span> de <span>Johnson Electric</span> et <span>fiabilité</span></h1>
-        <h1 style="margin-left:0px; margin-top:90px; float:left; position:absolute; font-weight:bold;">Sélectionner le fichier Excel et cliquer sur appliquer</h1>
-        <br><br><br>
+        <div class="progress" id="submit_progress" style="margin-bottom:-60px;">
+			<div class="progress-bar progress-bar-success " role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="load" style="width:0%">
+				0%
+			</div>
+		</div>
+        <br><br>
+				<h1 style="margin-left:0px; margin-top:100px; float:left; position:absolute; font-weight:bold;">1 - Sélectionner le numéro de produit</h1>
+		<select style="margin-left:700px; margin-top:165px; float:left; position:absolute; " required>
+		<option style="position:absolute; " value="89005907">89005907</option>
+		</select>
         <Form action="/telechargerlexcel" method="POST" enctype="multipart/form-data">
-        <div style="margin-left:600px; margin-top:150px; float:left; position:absolute;">
+		<h1 style="margin-left:0px; margin-top:195px; float:left; position:absolute; font-weight:bold;">2 - Sélectionner le fichier Excel et cliquer sur appliquer</h1>
+        <div style="margin-left:600px; margin-top:260px; float:left; position:absolute;">
 			<input type="file" name="inputFile" class="LoadButton" id="LoadButton" accept=".xlsx" style=" font-weight: 400; font-family: 'Open Sans', Helvetica;" required/>	
         </div>
-        <button id="myButton" style="margin-left:700px; margin-top:240px; float:left; position:absolute;" type="submit" value="Submit" >APPLIQUER</button>
+				<h1 style="margin-left:0px; margin-top:295px; float:left; position:absolute; font-weight:bold;">3 - Cliquer sur Appliquer</h1>
+        <button id="myButton" style="margin-left:700px; margin-top:360px; float:left; position:absolute;" type="submit" value="Submit" >APPLIQUER</button>
         </Form>
-		<div class="progress" id="submit_progress" style="margin-top:-60px;">
-  <div class="progress-bar progress-bar-success " role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="load" style="width:0%">
-    0%
-  </div>
+		
+		
 
 	    <script src="{{ url_for('static',filename='index.js') }}"></script>
 	    	
