--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,10 @@
 		</div>
         <br><br>
 				<h1 style="margin-left:0px; margin-top:100px; float:left; position:absolute; font-weight:bold;">1 - Sélectionner le numéro de produit</h1>
-				
+		<select style="margin-left:700px; margin-top:165px; float:left; position:absolute; " required>
+		<option style="position:absolute; " value="89005907">89005907</option>
+		</select>
         <Form action="/telechargerlexcel" method="POST" enctype="multipart/form-data">
-		<input style="margin-left:700px; margin-top:165px; float:left; position:absolute; " value="89005907" name="prod">89005907</option>
 		<h1 style="margin-left:0px; margin-top:195px; float:left; position:absolute; font-weight:bold;">2 - Sélectionner le fichier Excel et cliquer sur appliquer</h1>
         <div style="margin-left:600px; margin-top:260px; float:left; position:absolute;">
 			<input type="file" name="inputFile" class="LoadButton" id="LoadButton" accept=".xlsx" style=" font-weight: 400; font-family: 'Open Sans', Helvetica;" required/>	
