--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,7 @@ h1 span { color: #4DAF7C; font-weight: 400; }
 	left: 0;
 	padding: 5px;
 }
-a,#myButton {
+a,input,#myButton {
 	-moz-box-shadow: 0px 10px 14px -7px #3e7327;
 	-webkit-box-shadow: 0px 10px 14px -7px #3e7327;
 	box-shadow: 0px 10px 14px -7px #3e7327;
@@ -69,7 +69,7 @@ a,#myButton {
 	text-decoration:none;
 	text-shadow:0px 1px 0px #5b8a3c;
 }
-a,#myButton:hover {
+a,input,#myButton:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #72b352), color-stop(1, #4DAF7C));
 	background:-moz-linear-gradient(top, #72b352 5%, #4DAF7C 100%);
 	background:-webkit-linear-gradient(top, #72b352 5%, #4DAF7C 100%);
