--- a/templates/graphe.html
+++ b/templates/graphe.html
@@ -97,9 +97,9 @@
         <span style="margin-top:15px; margin-left:100px; position:absolute;"><a id="start" style="margin-left:100px;" href="comparaison">Retour</a>
             <a style="margin-left:900px; " href="/">Charger un nouvel excel</a></span> 
         <form action="/miniup" method="POST">
-            <h1 style="margin-left:-60px; margin-top:80px; float:left; position:absolute; font-weight:bold;">Prédiction à partir de la semaine :</h1>
-            <input placeholder="31" style="margin-left:950px; margin-top:89px; float:left; position:absolute; font-family: 'Open Sans', Helvetica;" type="number" name="mini" min="3" max="{{maxhist}}">
-            <button id="appli" class="LoadButton" style="margin-left:710px; margin-top:140px; float:left; position:absolute;" type="submit">Appliquer</button>
+            <h1 style="margin-left:-75px; margin-top:81px; float:left; position:absolute; font-weight:bold;">Prédiction à partir de la semaine :</h1>
+            <input placeholder="31" style="margin-left:937px; margin-top:86px; float:left; position:absolute; width:50px;" type="number" name="mini" min="3" max="{{maxhist}}">
+            <button id="appli" class="LoadButton" style="margin-left:710px; margin-top:150px; float:left; position:absolute;" type="submit">Appliquer</button>
         </form>
 			<button id="ex" class="LoadButton" style="margin-left:675px; margin-top:385px; float:left; position:absolute;" onclick="createexcel();">Télécharger l'Excel</button>
         <br />
